# cargo-doc2readme

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.nightly  README.j2  README.md  release.sh  rustfmt.sh  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: nightly.yml  rust.yml
src/: README.j2  depinfo.rs  diagnostic.rs  input.rs  lib.rs  links.rs  main.rs  output.rs  preproc.rs  verify.rs
tests/: tests.rs
tests/check/markdown-version-1/: Cargo.toml  README.j2
tests/fail/syntax-error/: Cargo.toml
tests/fail/workspace-root/: Cargo.toml
tests/fail/workspace-root/member/: Cargo.toml
tests/mixing-comments-and-attrs/: README.md
tests/nested-lists/: README.md  lib.rs
tests/pass/all-features/: Cargo.toml  Config.toml  README.md
tests/pass/code-block-in-list/: Cargo.toml  README.md  lib.rs
tests/pass/code-block-with-hidden-lines/: Cargo.toml  README.md  lib.rs
tests/pass/default-template-codeberg/: Cargo.toml  README.md  lib.rs
tests/pass/default-template-github/: Cargo.toml  README.md  lib.rs
tests/pass/default-template-gitlab/: Cargo.toml  README.md  lib.rs
tests/pass/default-template-no-details/: Cargo.toml  README.md  lib.rs
tests/pass/doc-attr-warning/: Cargo.toml  lib.rs
tests/pass/doc-cfg-attr-warning/: Cargo.toml  lib.rs
tests/pass/features/: Cargo.toml  Config.toml  README.md  lib.rs  test.toml
tests/pass/fn-link/: Cargo.toml  README.j2  README.md  lib.rs
tests/pass/github-alert/: Cargo.toml  README.md  lib.rs
tests/pass/markdown-version-1/: README.md  lib.rs
tests/pass/mixing-comments-and-attrs/: Cargo.toml  README.md  lib.rs
tests/pass/nested-lists/: Cargo.toml  README.md  lib.rs
tests/pass/no-default-features/: Cargo.toml  Config.toml  README.md  lib.rs  test.toml
tests/pass/proc-macro/: Cargo.toml  README.md  lib.rs  test.toml
tests/pass/proc-macros/: Cargo.toml  README.md  lib.rs
tests/pass/wildcard-import/: Cargo.toml  README.md  lib.rs  test.toml
