[package]
name = "cargo-doc2readme"
version = "0.1.6"
description = "cargo subcommand to create a readme file containing the rustdoc comments from your code"
authors = ["Dominic <git@msrd0.de>"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo", "subcommand", "readme", "doc2readme", "rustdoc"]
edition = "2021"
rust-version = "1.61.0"
repository = "https://github.com/msrd0/cargo-doc2readme"
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0.64"
base64 = "0.13"
blake3 = "1.3"
# waiting for https://github.com/oli-obk/cargo_metadata/pull/185 to be part of a release
cargo_metadata = { git = "https://github.com/oli-obk/cargo_metadata", rev = "c0e2194cfd141d770bb5844ad4f40aad8fbbd92b" }
clap = { version = "3.2", features = ["derive"] }
either = "1.6"
itertools = "0.10"
log = "0.4"
memchr = "2.5"
monostate = "0.1"
pulldown-cmark = { version = "0.9", default-features = false }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
simple_logger = { version = "2.3", features = ["colors", "stderr"], default-features = false }
syn = { version = "1.0.98", features = ["full", "parsing"], default-features = false }
tera = { version = "1.17", features = ["urlencode"], default-features = false }
unindent = "0.1.9"
url = "2.2"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }

[dev-dependencies]
hex = "0.4.3"
indoc = "=1.0.5"
pretty_assertions = "1.3"

[profile.release]
lto = true
opt-level = "z"
strip = true
