[package]
name = "cargo-doc2readme"
version = "0.3.0"
description = "cargo subcommand to create a readme file containing the rustdoc comments from your code"
authors = ["Dominic <git@msrd0.de>"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo", "subcommand", "readme", "doc2readme", "rustdoc"]
edition = "2021"
rust-version = "1.61.0"
repository = "https://github.com/msrd0/cargo-doc2readme"
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*", "Cargo.lock", "README.md", "LICENSE"]

autotests = false
[[test]]
name = "tests"
path = "tests/tests.rs"
harness = false

[dependencies]
anyhow = "1.0"
ariadne = "0.4"
base64 = "0.22"
blake3 = "1.5"
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive", "wrap_help"] }
either = "1.9"
itertools = "0.12"
log = "0.4"
memchr = "2.7"
minijinja = { version = "1.0", features = ["builtins", "debug", "key_interning", "urlencode"], default-features = false }
monostate = "0.1"
proc-macro2 = { version = "1.0", features = ["span-locations"], default-features = false }
pulldown-cmark = { version = "0.10", default-features = false }
quote = "1.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
simple_logger = { version = "4.3", features = ["colors", "stderr"], default-features = false }
syn = { version = "2.0", features = ["clone-impls", "full", "parsing", "printing"], default-features = false }
url = "2.5"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
pulldown-cmark = { version = "0.10", default-features = false, features = ["simd"] }

[dev-dependencies]
hex = "0.4.3"
lazy-regex = "3.0"
libtest = { version = "0.7", package = "libtest-mimic" }
pretty_assertions = "1.4"
rustversion = "1.0.11"
toml = { version = "0.1", package = "basic-toml" }

[profile.release]
lto = true
opt-level = "z"
strip = true
